spacing image and <p> fixed

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ img{
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: -65px;
+	margin-bottom: -15px;
 }
 
 p{
